Add first projects post on Archangel

--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -1,10 +1,10 @@
-$fontSans: "Helvetica Neue", Helvetica, Arial, sans-serif
+$fontSans: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
 $fontMonospace: "Consolas", Liberation Mono, Menlo, Courier, monospace
 
-$alpha: #666
+$alpha: #111
 $beta: #222
 $gama: #aaa
-$delta: #4b0082
+$delta: #0366d6
 $epsilon: #ededed
 
 $mobile: "only screen and (max-width: 400px)"
