--- a/_sass/components/others.sass
+++ b/_sass/components/others.sass
@@ -30,9 +30,11 @@
     text-align: center
     font-size: 1.3rem
 
+.small-image
+    max-width: 50%
+
 .bigger-image
     min-width: 130%
-    margin: 5rem 0 5rem -15%
 
     @media #{$mobile}
         min-width: 114%
