--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -42,7 +42,7 @@ p
 		letter-spacing: 0.2px
 
 strong
-	font-weight: 400
+	font-weight: 700
 	color: #000
 
 ul,
@@ -84,7 +84,7 @@ hr
 	border: none
 	height: 1px
 	margin: 40px auto
-	background: #eee
+	background: #000
 	width: 100%
 
 figure.highlight
