--- a/_sass/components/header.sass
+++ b/_sass/components/header.sass
@@ -25,7 +25,7 @@
         font-size: 1.85rem
         font-weight: 300
         font-style: normal
-        color: $gama
+        color: #000000
         width: 75%
         margin: 0 auto 30px
 
