--- a/_sass/pages/home-blog-projects.sass
+++ b/_sass/pages/home-blog-projects.sass
@@ -1,6 +1,7 @@
 .home,
 .blog,
-.projects
+.projects,
+.research,
     margin-top: 125px
 
     > .list
@@ -25,6 +26,7 @@
 
 .home > .list,
 .blog > .list,
+.research > .list,
 .projects > .list
     > .item
         display: block
@@ -63,6 +65,7 @@
         color: $alpha
 
 .blog > .list > .item > .url,
+.research > .list > .item > .url,
 .projects > .list > .item > .url
     > .title
         display: inline
