Update website for LAPD work

--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -42,14 +42,15 @@ p
 		letter-spacing: 0.2px
 
 strong
+	font-weight: 540
+b
 	font-weight: 700
-	color: #000
 
 ul,
 ol
 	li
 		line-height: 2.4rem
-		font-weight: 300
+		font-weight: 350
 		color: $alpha
 
 img,
@@ -130,4 +131,4 @@ pre
 	max-width: 560px
 
 .wrapper-large
-	max-width: 810px
+	max-width: 950px
