--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
         {% endif %}
 
         <h1 class="title">{{ site.name }}</h1>
-        <h2 class="description">{{ site.bio }}</h2>
+        <h2 class="description">{{ site.bio }} {% if page.title == "Home"%} <br><br> {{ site.bioext }} {% endif %}</h2>
 
         {% include social-links.html %}
     </header>
