--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,6 +22,15 @@
             {% endif %}
         {% endif %}
 
+        {% if site.teaching == true %}
+            {% if page.title != "Teaching" %}
+                <li class="item">
+                    <a class="link" href="{{ site.url }}/teaching">Teaching</a>
+                </li>
+            {% endif %}
+        {% endif %}
+
+
 
         {% if site.blog == true %}
             {% if page.title != "Blog" %}
