--- a/_sass/pages/page.sass
+++ b/_sass/pages/page.sass
@@ -10,3 +10,41 @@
         width: 50%
         margin: 0 auto
         display: block
+
+table
+    display: table
+    border-collapse: collapse
+    border-spacing: 2px
+    border-color: black
+
+table, th, td
+    border: 1px solid
+tbody
+    display: table-row-group
+    vertical-align: middle
+    border-color: inherit
+
+td
+    display: table-cell
+    vertical-align: inherit
+
+tfoot
+    display: table-footer-group
+    vertical-align: middle
+    border-color: inherit
+
+th
+    display: table-cell
+    vertical-align: inherit
+    font-weight: bold
+    text-align: center
+
+thead
+    display: table-header-group
+    vertical-align: middle
+    border-color: inherit
+
+tr
+    display: table-row
+    vertical-align: inherit
+    border-color: inherit
