--- a/_includes/analytics-google.html
+++ b/_includes/analytics-google.html
@@ -1,4 +1,13 @@
 <!-- Google Analytics Tracking code -->
+<script async src="{{ site.analytics-google | prepend: 'https://www.googletagmanager.com/gtag/js?id='}}"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', '{{ site.analytics-google }})';
+</script>
+<!--
 <script type="text/javascript">
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', '{{ site.analytics-google }}']);
@@ -9,3 +18,4 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
 </script>
+-->
