--- a/_includes/analytics-google.html
+++ b/_includes/analytics-google.html
@@ -5,7 +5,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', '{{ site.analytics-google }})';
+  gtag('config', '{{ site.analytics-google }}');
 </script>
 <!--
 <script type="text/javascript">
